Bunch of warning fixed. Removed some unused code. Added language keys to programmable gate presets. Tested on client and server, on fabric and neoforge.